force-app/main/default/objects/Assignment_History__c/fields/StartDatetoEndDate__c.field-meta.xml
<CustomField>
    <fullName>StartDatetoEndDate__c</fullName>
    <description>Used for reporting</description>
    <formula>End_Date__c - Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date to End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>