force-app/main/default/objects/Assignment_History__c/fields/Tenure_Days__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Days__c</fullName>
    <formula>IF( 
NOT(ISNULL(End_Date__c)),
TEXT(End_Date__c-Start_Date__c), 
TEXT(TODAY()-Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenure (Days)</label>
    <type>Text</type>
</CustomField>