force-app/main/default/objects/Assignment_History__c/fields/Tenure_Days_in_numeric_value__c.field-meta.xml
<CustomField>
    <fullName>Tenure_Days_in_numeric_value__c</fullName>
    <formula>IF( 
NOT(ISNULL(End_Date__c)),
End_Date__c-Start_Date__c, 
TODAY()-Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenure (Days in numeric value)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>