force-app/main/default/objects/Assignment_History__c/fields/X090days__c.field-meta.xml
<CustomField>
    <fullName>X090days__c</fullName>
    <description>This field is used for reporting</description>
    <formula>VALUE(Tenure_Days__c) &lt;= 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>0-90 days</label>
    <type>Checkbox</type>
</CustomField>