force-app/main/default/objects/Assignment_History__c/fields/X121365Days__c.field-meta.xml
<CustomField>
    <fullName>X121365Days__c</fullName>
    <description>This field is used for reporting</description>
    <formula>VALUE(Tenure_Days__c)&gt;=121
&amp;&amp;
VALUE(Tenure_Days__c)&lt;=364</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>121 - 365 Days</label>
    <type>Checkbox</type>
</CustomField>