force-app/main/default/objects/Assignment_History__c/fields/X365Days__c.field-meta.xml
<CustomField>
    <fullName>X365Days__c</fullName>
    <description>This field is used for reporting</description>
    <formula>VALUE(Tenure_Days__c) &gt;= 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>365+ Days</label>
    <type>Checkbox</type>
</CustomField>